# FixedPoint64

./: .codecov.yml  CMakeLists.txt  README.md  run.bat  run.sh
.github/workflows/: benchmark.yml  cmake-multi-platform.yml
benchmark/: benchmark.cpp  benchmark.md
include/: fixed64.hpp  fixed64.natvis  trig_lut.hpp
test/: common_tests.cpp  main.cpp  overflow_div_test.cpp
